// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.Text check default default props from Mixins UU5.Commons.Base_Elementary_Pure_Color 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text check default default props from Mixins UU5.Forms.InputMixin 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text check default default props from Mixins UU5.Forms.TextInputMixin 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text default props UU5.Forms.Text check default props 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props autocompleteItems=undefined 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props className="my-classname" 1`] = `
<div
  className="uu5-forms-text my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props className="test-classname" 1`] = `
<div
  className="uu5-forms-text test-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="brown"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="brown-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="cyan"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="cyan-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="default"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="green"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="green-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="grey"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="grey-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="orange"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="orange-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="pink"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="pink-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="purple"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="purple-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="red"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="red-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="yellow"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      colorSchema="yellow-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props controlled=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props controlled=true 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props default props 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props disabled=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props disabled=false 3`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props disabled=true 1`] = `
<div
  className="uu5-forms-text uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <autocomplete-text-input
      disabled={true}
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props disabled=true 3`] = `
<div
  className="uu5-forms-text uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <autocomplete-text-input
      disabled={true}
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props feedback="error" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
  >
    <autocomplete-text-input
      feedback="error"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props feedback="initial" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props feedback="loading" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
  >
    <autocomplete-text-input
      disabled={true}
      feedback="loading"
      id="uuID-input"
      loading={true}
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props feedback="success" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
  >
    <autocomplete-text-input
      feedback="success"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props feedback="warning" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
  >
    <autocomplete-text-input
      feedback="warning"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props focusMessage="Bedlivě hlídám co píšete." 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-forms-text uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props function -> InputMixin onChange() 1`] = `
<Text
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.Text props function -> InputMixin onChange() 2`] = `
<Text
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.Text props function -> InputMixin onChangeFeedback() 1`] = `
<Text
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.Text props function -> InputMixin onChangeFeedback() 2`] = `
<Text
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.Text props function -> InputMixin onValidate() 1`] = `
<Text
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.Text props function -> InputMixin onValidate() 2`] = `
<Text
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin onBlur() 1`] = `
<Text
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin onBlur() 2`] = `
<Text
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin onEnter() 1`] = `
<Text
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin onEnter() 2`] = `
<Text
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin onFocus() 1`] = `
<Text
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin onFocus() 2`] = `
<Text
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin validateOnChange() - input is invalid 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Not valid."
    readonly={false}
  >
    <autocomplete-text-input
      feedback="error"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props function -> Text.InputMixin validateOnChange() - input is valid 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="Is valid."
    readonly={false}
  >
    <autocomplete-text-input
      feedback="success"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
      value="Testing react with jest"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props hidden=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props hidden=false 3`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props hidden=true 1`] = `
<div
  className="uu5-forms-text uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props hidden=true 3`] = `
<div
  className="uu5-forms-text uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props id="myId" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="myId-input"
      mainAttrs={Object {}}
      name="myId-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props id="test-id" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="test-id"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="test-id-input"
      mainAttrs={Object {}}
      name="test-id-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={
        Object {
          "type": "email",
          "width": "150px",
        }
      }
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props label="Your personal email" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props name="myName" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="myName"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props nestingLevel="box" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props nestingLevel="inline" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-inline uu5-forms-input-auto-width"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      inputWidth="auto"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props noIndex=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props noIndex=true 1`] = `
<div
  className="uu5-forms-text uu5-noindex uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props noPrint=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props noPrint=true 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props password=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props password=true 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
      type="password"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props pattern="[A-Za-z]{3}" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props patternMessage="Toto není co jsem čekal." 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props placeholder="Prosím vyplňte požadované pole .." 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Prosím vyplňte požadované pole .."
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props placeholder="např.: +420 000 000 000" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="např.: +420 000 000 000"
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props pureRender=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props pureRender=true 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props readOnly=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props readOnly=true 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onKeyDown={[Function]}
      readonly={true}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props required=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props required=true 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    required={true}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props requiredMessage="Bez tohoto pole se nehnete dál." 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props selected=false 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props selected=true 1`] = `
<div
  className="uu5-forms-text uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props size="l" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-l uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="l"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props size="m" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props size="s" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="s"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props style={"margin":8} 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Text props value="666" 1`] = `
<div
  className="uu5-forms-text uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <autocomplete-text-input
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      size="m"
      value="666"
    />
  </InputWrapper>
</div>
`;
